--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 		<thead>
 			<th>Id</th>
 			<th>Name</th>
+			<th>Idade</th>
 			<th>Sexo</th>
 			<th>Action</th>
 		</thead>
@@ -14,6 +15,9 @@
 				<td>
 					<input formControlName="name" class="form-control">
         </td>
+				<td>
+					<input formControlName="idade" class="form-control">
+				</td>
 				<td>
 					<select type="text" formControlName="sexo" class="form-control">
 						<option value="">--</option>
